fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@ body,
 :root,
 #__next{
   min-width: 100vw;
-  min-height: 100%;
+  height: 100vh;
 }
  
 @layer base {
